--- a/index.html
+++ b/index.html
@@ -3,8 +3,15 @@
 <head>
     <title>Homepage</title>
 </head>
-<body>
-    <h1>Welcome To Better Than Banking</h1>
-    <p>We'll create more content later...</p>
+<body style="font-family: Verdana, Arial, sans-serif">
+    <h1 style="color: red; background-color: #87ceeb;">
+        Welcome To Better Than Banking
+    </h1>
+    <p style="margin-left: 30px; margin-top: 40px;">
+        Incoming...
+    </p>
+    <p style="margin-left:30px; margin-top: 0px;"> 
+        Something special
+    </p>
 </body>    
 </html>
