--- a/index.html
+++ b/index.html
@@ -7,11 +7,18 @@
     <h1 style="color: red; background-color: #87ceeb;">
         Welcome To Better Than Banking
     </h1>
-    <p style="margin-left: 30px; margin-top: 40px;">
+    <h2 style="color:antiquewhite; background-color:darkorchid; margin-left: 20px;">
+    Beating The Banks
+    </h2>
+    <p style="margin-left: 40px; margin-top: 40px;">
         Incoming...
     </p>
-    <p style="margin-left:30px; margin-top: 0px;"> 
+    <p style="margin-left:40px;"> 
         Something special
     </p>
+    <h1 style="color:red; background-color:#87ceeb">
+        Learn To Trade
+    </h1>
+    
 </body>    
 </html>
