embedding a styling sheet

--- a/index.html
+++ b/index.html
@@ -2,23 +2,27 @@
 <html>
 <head>
     <title>Homepage</title>
+    <style>
+        body {
+            font-size: Verdana, Arial, sans-serif;
+        }
+        h1 {
+            color: red;
+            background-color: #87ceeb;
+        }
+        h2 {
+            color: green;
+            margin-left: 20px;
+        }
+        h1 {
+            color: red;
+            background-color: #87ceeb;
+        }
+    </style>
 </head>
 <body style="font-family: Verdana, Arial, sans-serif">
-    <h1 style="color: red; background-color: #87ceeb;">
-        Welcome To Better Than Banking
-    </h1>
-    <h2 style="color:antiquewhite; background-color:darkorchid; margin-left: 20px;">
-    Beating The Banks
-    </h2>
-    <p style="margin-left: 40px; margin-top: 40px;">
-        Incoming...
-    </p>
-    <p style="margin-left:40px;"> 
-        Something special
-    </p>
-    <h1 style="color:red; background-color:#87ceeb">
-        Learn To Trade
-    </h1>
-    
+    <h1>Welcome to Scalp Kings</h1>
+    <h2>Beating The Banks</h2>
+    <h1>One Trade at a Time</h1>
 </body>    
 </html>
