--- a/index.html
+++ b/index.html
@@ -2,27 +2,13 @@
 <html>
 <head>
     <title>Homepage</title>
-    <style>
-        body {
-            font-size: Verdana, Arial, sans-serif;
-        }
-        h1 {
-            color: red;
-            background-color: #87ceeb;
-        }
-        h2 {
-            color: green;
-            margin-left: 20px;
-        }
-        h1 {
-            color: red;
-            background-color: #87ceeb;
-        }
-    </style>
+        <link href="style.css" rel="stylesheet"/>
 </head>
 <body style="font-family: Verdana, Arial, sans-serif">
     <h1>Welcome to Scalp Kings</h1>
     <h2>Beating The Banks</h2>
     <h1>One Trade at a Time</h1>
+    <h2>Learn Trading Fundamentals... no FOMO</h2>
+    <p>Let's get started my goats!</p>
 </body>    
 </html>
