adding package.json

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     </h1>
     <h2 onclick="handleClick(this)">
          Trading Fundamentals... no FOMO</h2>
+    <p>Lets get started my goats!</p>
     <script>
         function handleClick(node) {
             var value = node.getAttribute('class') || '';
