Emphasizing certain text

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <title>Skalp Kings Homepage</title>
-        <link href="style.css" rel="stylesheet"/>
+    <link href="style.css" rel="stylesheet"/>
 </head>
 <body>
     <h1>Welcome to Scalp Kings</h1>
@@ -11,7 +11,7 @@
     </div>
     <h1>One Trade at a Time</h1>
     <div>
-    <h2>Trading Fundamentals... no FOMO</h2>
+    <h2>Trading Fundamentals...<em> no FOMO</em></h2>
     </div>
     <p>Lets get started my goats!</p>
 <script src="node_modules/jquery/dist/jquery.js"></script>
