Added logo to website.

--- a/index.html
+++ b/index.html
@@ -5,6 +5,12 @@
     <link href="style.css" rel="stylesheet"/>
 </head>
 <body>
+
+<header>
+    <div class="container">
+        <img src="assets/BTBlogo.png" alt="logo" class="logo">
+    </div>
+</header>
     <h1>Welcome to Scalp Kings</h1>
     <div>
     <h2>Beating The Banks</h2>
