--- a/index.html
+++ b/index.html
@@ -9,6 +9,14 @@
 <header>
     <div class="container">
         <img src="assets/BTBlogo.png" alt="logo" class="logo">
+
+        <nav>
+            <ul>
+                <li><a href="#">Pricing</a> </li>
+                <li><a href="#">About</a> </li>
+                <li><a href="#">Blog</a></li>
+            </ul>
+        </nav>
     </div>
 </header>
     <h1>Welcome to Scalp Kings</h1>
