--- a/index.html
+++ b/index.html
@@ -19,9 +19,12 @@
         </nav>
     </div>
 </header>
-    <h1>Welcome to Scalp Kings</h1>
+    <h1>Welcome to Better Than Banking (<abbr>BTB</abbr>)</h1>
     <div>
     <h2>Beating The Banks</h2>
+        <p>You will do so by learning how to trade. Don't let your money depreciate sitting in a bank account! </p>
+        <br/>
+        <p>Take control of your $ and trade stocks!</p>
     </div>
     <h1>One Trade at a Time</h1>
     <div>
